# whack

./: .gitignore  NOTES.md  README.md  game.qbs  main.cpp
apk/: AndroidManifest.xml
art/: entities.xcf  objects.xcf  sheet.xcf  skydomes.xcf  tiles.xcf  ui.xcf
data/levels/: demo.level  demo_light.level  new.level
data/textures/: entities.json  sheet.json  skydomes.json  tiles.json  ui.json
editor/: CMakeLists.txt  fragment.glsl  levelviewer.cpp  levelviewer.h  lighttablemodel.cpp  lighttablemodel.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  new_level.ui  renderer.cpp  renderer.h  shaders.qrc  textureview.cpp  textureview.h  vertex.glsl
src/backend/: backend.cpp  backend.h  rwops_stream.cpp  rwops_stream.h  rwops_streambuf.cpp  rwops_streambuf.h
src/behaviour/: behaviour.h  emptybhv.cpp  emptybhv.h  hangaroundbhv.cpp  hangaroundbhv.h  meleeattackbhv.cpp  meleeattackbhv.h  robberbhv.cpp  robberbhv.h
src/controller/: controller.h  inputmanager.cpp  inputmanager.h
src/game/: application.cpp  application.h  gamescreen.cpp  gamescreen.h  menuscreen.cpp  menuscreen.h  settingsscreen.cpp  settingsscreen.h
src/graphics/: animation.h  font.cpp  font.h  ninepatch.cpp  ninepatch.h  renderer2d.cpp  renderer2d.h  screen.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h  textureatlasreader.cpp  textureatlasreader.h
src/level/: block.cpp  block.h  colorskydome.cpp  level.h  (+23 more)
test/: math_test.h  rangeset_test.h  rwops_test.h  textureatlasreader_test.h  update.sh  utils_test.h
tools/: gimp_export_atlas.py  gimp_gen_9patch.py  gimp_gen_anim.py
(+64 files in other folders)
